--- a/The Document Object Model/index.html
+++ b/The Document Object Model/index.html
@@ -6,7 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Plant Swap</title>
     <link rel="stylesheet" href="./src/style.css">
-    <!-- <script defer src="./src/index.js"></script> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -14,44 +18,68 @@
     <hr>
     <nav>
         <a href="#">Swap List</a>
-        <a href="#">My Wishlist</a>
-        <a href="#">Plant Diagnose List</a>
+        <a href="./problem.html">Plant Diagnose List</a>
     </nav>
     <hr>
 
     <div class="form-container">
 
-        <form id="swap-from">
+        <form id="swap-from" class="row ">
+
             <!-- Plant Name -->
-            <label for="pname">Plant Name:
-                <input type="text" id="pname" name="pname"></label>
+            <div class="row mb-3">
+                <label for="pname" class="col-sm-2 col-form-label">Plant Name: </label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" id="pname" name="pname">
+                </div>
+            </div>
 
             <!-- Plant Type -->
-            <label for="ptype">Choose a Plant Type:
-                <select id="ptype" name="ptype">
-                    <option> Indoor Plant</option>
-                    <option> Outdoor Plant</option>
-                    <option> Seed</option>
-                </select>
-            </label>
-
+            <div class="row mb-3">
+                <label for="ptype" class="col-sm-2 col-form-label"> Plant Type: </label>
+                <div class="col-sm-10">
+                    <select class="form-select" id="ptype" name="ptype">
+                        <option> Indoor Plant</option>
+                        <option> Outdoor Plant</option>
+                        <option> Seed</option>
+                    </select>
+                </div>
+            </div>
 
             <!-- Plant Measurement -->
-            <label for="pheight">Plant Height: <input type="number" id="pheight" name="pheight" min="0"> inches</label>
+            <div class="col-md-6">
+                <label for="pheight" class="form-label">Plant Height (inches): </label>
+                <input type="number" class="form-control" id="pheight" name="pheight" min="0">
+            </div>
 
-            <label for="pwidth">Plant Width: <input type="number" id="pwidth" name="pwidth" min="0"> inches</label>
 
-            <!-- Plant Consition-->
+            <div class="col-md-6">
+                <label for="pwidth" class="form-label">Plant Width (inches): </label>
+                <input type="number" class="form-control" id="pwidth" name="pwidth" min="0">
+            </div>
+
+
+
+            <!-- Plant Conditions-->
             <fieldset>
                 <legend>Plant Health Condition:</legend>
-                <label for="condition1">
-                    <input type="checkbox" id="condition1" name="condition1" value="Healthy" class="condition">
-                    Healthy
-                </label>
-                <label for="condition2">
-                    <input type="checkbox" id="condition2" name="condition2" value="Need more love" class="condition">
-                    Need more love
-                </label>
+
+                <div class="form-check form-check-inline">
+                    <input type="checkbox" class="form-check-input condition" id="condition1" name="condition1"
+                        value="Healthy">
+                    <label for="condition1" class="form-check-label">
+                        Healthy
+                    </label>
+                </div>
+
+                <div class="form-check form-check-inline">
+                    <input type="checkbox" class="form-check-input condition" id="condition2" name="condition2"
+                        value="Need more love" class="condition" value="Healthy">
+                    <label for="condition2" class="form-check-label"> 
+                        Need more love
+                    </label>
+                </div>
+
                 <label for="condition3">
                     <input type="checkbox" id="condition3" name="condition3" value="Sick" class="condition">
                     Sick
@@ -61,6 +89,8 @@
                     Dying
                 </label>
             </fieldset>
+
+
 
             <!-- Plant Problem -->
             <fieldset>
