added search box for dog

--- a/SBA_308A_JS_Web_APP/index.html
+++ b/SBA_308A_JS_Web_APP/index.html
@@ -4,23 +4,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Disney</title>
+    <title>Dogs</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-
 
 
 
 </head>
 
 <body>
-    <h1>Disney Characters</h1>
-    <div id="disney-character-container"></div>
+    <h1>Find Your Perfect Pet</h1>
 
-    <div id="pagination-container">
-        <button type="button" id="prePgBtn">Pervious page</button>
-        <button type="button" id="nextPgBtn">Next page</button>
+    <div id="search box">
+        <form action="">
+            <select name="dog_breed" id="dog_breed_select"></select>
+            <button id="dog_breed_select_btn">Search</button>
+        </form>
     </div>
+
+    <div id="dogs-container">
+
+    </div>
+
+
 
     <script src="index.js"></script>
 </body>
