--- a/SBA_308A_JS_Web_APP/index.html
+++ b/SBA_308A_JS_Web_APP/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dogs</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
 
 
 
@@ -14,21 +14,15 @@
 
 <body>
     <h1>Find Your Perfect Pet</h1>
+    <nav> 
+        <a href="search.html">Search Dogs</a>
+        <a href="fav.html">Favorite List</a>
+    </nav>
 
-    <div id="search box">
-        <form action="">
-            <select name="dog_breed" id="dog_breed_select"></select>
-            <button id="dog_breed_select_btn">Search</button>
-        </form>
-    </div>
+    <div id="random_img_container"></div>
 
-    <div id="dogs-container">
-
-    </div>
-
-
-
-    <script src="index.js"></script>
+    
+   
 </body>
 
 </html>
