add delete btn and fav list

--- a/SBA_308A_JS_Web_APP/fav.html
+++ b/SBA_308A_JS_Web_APP/fav.html
@@ -7,14 +7,23 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
 </head>
 
 <body>
     <div id="fav-container"> 
 
+
+
         
     </div>
 </body>
-<script src="fav.js"></script>
+<script type="module" src="fav.js"></script>
+<!-- <script>
+    // Execute the getFavourites function when the page is loaded
+    window.onload = async () => {
+        await getFavourites();
+    };
+</script> -->
 
 </html>
