--- a/SBA_308A_JS_Web_APP/index.html
+++ b/SBA_308A_JS_Web_APP/index.html
@@ -4,31 +4,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dogs</title>
+    <title>Find Your Perfect Dog</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    
-
-
+    <script type="module" src="random.js"></script>
 </head>
 
 <body>
-    <h1>Find Your Perfect Pet</h1>
+    <h1>Find Your Perfect Dog</h1>
     <nav>
         <a href="search.html">Search Dogs</a>
         <a href="fav.html">Favorite List</a>
     </nav>
 
-    <div>
-        <button id="refresh_btn">refresh</button>
+    <div id="main">
+        <button id="refresh_btn">Try me again!</button>
         <div id="random_img_container">
 
         </div>
     </div>
-
-
-    <script type="module" src="random.js"></script>
-
 </body>
 
 </html>
