finalize current versionn

--- a/SBA_308A_JS_Web_APP/index.html
+++ b/SBA_308A_JS_Web_APP/index.html
@@ -17,10 +17,13 @@
         <a href="fav.html">Favorite List</a>
     </nav>
 
+
+
     <div id="main">
         <button id="refresh_btn">Try me again!</button>
         <div id="random_img_container">
 
+            <div id="loading-indicator">Loading...</div>
         </div>
     </div>
 </body>
