--- a/SBA_308A_JS_Web_APP/i.html
+++ b/SBA_308A_JS_Web_APP/i.html
@@ -14,7 +14,7 @@
     <h1>Find Your Perfect Dog</h1>
     <nav>
         <a href="search.html">Search Dogs</a>
-        <a href="fav.html">Favorite List</a>
+        <a href="fav.html">Favorites list</a>
     </nav>
 
 
