--- a/SBA_308A_JS_Web_APP/search.html
+++ b/SBA_308A_JS_Web_APP/search.html
@@ -16,7 +16,7 @@
 
     <nav>
         <a href="index.html">Dog List</a>
-        <a href="fav.html">Favorite List</a>
+        <a href="fav.html">Favorites list</a>
     </nav>
     
     <div id="search-box">
